--- a/CodeWatch/frontend/index.html
+++ b/CodeWatch/frontend/index.html
@@ -10,11 +10,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body style="background: #040506;">
     <main class="d-flex flex-nowrap">
 
         <div id="sidenav">
-            <div class="d-flex flex-column flex-shrink-0 p-3 text-bg-dark" style="width: 210px; background-color: #1e1721;">
+            <div class="d-flex flex-column flex-shrink-0 p-3 text-dark" style="width: 210px; background-color: #1e1721;">
                 <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
                     <svg class="bi pe-none me-2" width="40" height="32">
                         <use xlink:href="#bootstrap" />
@@ -71,6 +71,27 @@
                     </li>
                 </ul>
             </div>
+        </div>
+
+        <div class="gscont">
+            <div class="gscontainer">
+                <div class="c1">
+                    <div class="h3">Welcome <span style="color: #896a9a;">User</span>!</div>
+                    <p></p>
+                </div>
+                <div class="c3">
+                    <div class="h3"></div>
+                    <p></p>
+                </div>
+                <div class="c4">
+                    <div class="h3"></div>
+                    <p></p>
+                </div>
+                <div class="c2">
+                    <div class="h3"></div>
+                    <p></p>
+                </div>
+              </div>
         </div>
 
     </main>
