--- a/CodeWatch/frontend/index.html
+++ b/CodeWatch/frontend/index.html
@@ -77,7 +77,9 @@
             <div class="gscontainer">
                 <div class="c1">
                     <div class="h3">Welcome <span style="color: #896a9a;">User</span>!</div>
-                    <p></p>
+                    <p>
+                        We have built this platform to help developers like us! They want to make their programming experience more productive. You can use our different utilities to optimize your workflow! To get perfectly set up, you can install our VS Code extension.
+                    </p>
                 </div>
                 <div class="c3">
                     <div class="h3"></div>
