--- a/CodeWatch/frontend/index.html
+++ b/CodeWatch/frontend/index.html
@@ -27,12 +27,12 @@
             <svg class="bi pe-none me-2" width="40" height="32">
               <use xlink:href="#bootstrap" />
             </svg>
-            <span class="fs-4">CodeWatch</span>
+            <span class="fs-4">Code<span style="color: #6c9df9">Watch</span></span>
           </a>
           <hr />
           <ul class="nav nav-pills flex-column mb-auto">
             <li class="nav-item">
-              <a href="#" class="nav-link activ acbg" aria-current="page">
+              <a href="index.html" class="nav-link activ acbg" aria-current="page">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="16"
@@ -52,7 +52,7 @@
               </a>
             </li>
             <li>
-              <a href="#" class="nav-link text-white">
+              <a href="analytics.html" class="nav-link text-white">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="16"
@@ -69,7 +69,7 @@
               </a>
             </li>
             <li>
-              <a href="#" class="nav-link text-white">
+              <a href="snippets.html" class="nav-link text-white">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="16"
@@ -86,7 +86,7 @@
               </a>
             </li>
             <li>
-              <a href="#" class="nav-link text-white">
+              <a href="profile.html" class="nav-link text-white">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="16"
@@ -103,7 +103,7 @@
               </a>
             </li>
             <li>
-              <a href="#" class="nav-link text-white">
+              <a href="settings.html" class="nav-link text-white">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="16"
