--- a/CodeWatch/frontend/snippets.html
+++ b/CodeWatch/frontend/snippets.html
@@ -129,17 +129,31 @@
           </ul>
         </div>
       </div>
-<div class="snipupload">
-    <a href="">
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-upload" viewBox="0 0 16 16">
-            <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
-            <path d="M7.646 1.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 2.707V11.5a.5.5 0 0 1-1 0V2.707L5.354 4.854a.5.5 0 1 1-.708-.708l3-3z"/>
-          </svg>
-          <span>Upload</span>
-    </a>
-</div>
+
+      <div class="snu">
+        <div class="snipupload">
+            <a class="sniphref position-absolute top-50 start-50 translate-middle" href="">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="16"
+                height="16"
+                fill="currentColor"
+                class="bi bi-upload"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"
+                />
+                <path
+                  d="M7.646 1.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 2.707V11.5a.5.5 0 0 1-1 0V2.707L5.354 4.854a.5.5 0 1 1-.708-.708l3-3z"
+                />
+              </svg>
+              <span class="fw-medium">Upload</span>
+            </a>
+          </div>
+      </div>
+
       <div class="container">
-        
         <div class="item">
           <div class="snippet">
             <pre><code>
@@ -149,11 +163,11 @@ b = int(input("Enter a number: "))
 print(math.pow(a,b))
             </code></pre>
           </div>
-          <hr style="background: #896a9a; color: #896a9a;">
+          <hr style="background: #896a9a; color: #896a9a" />
           <div class="snbod">
             <span class="badge" style="background: #896a9a">Python</span>
-            <br>
-            <p style="margin-top: 10px;">
+            <br />
+            <p style="margin-top: 10px">
               Python bot using pyBotDiscord made by Handsome Vipul
             </p>
           </div>
@@ -167,11 +181,11 @@ b = int(input("Enter a number: "))
 print(math.pow(a,b))
             </code></pre>
           </div>
-          <hr style="background: #896a9a; color: #896a9a;">
+          <hr style="background: #896a9a; color: #896a9a" />
           <div class="snbod">
             <span class="badge" style="background: #896a9a">Python</span>
-            <br>
-            <p style="margin-top: 10px;">
+            <br />
+            <p style="margin-top: 10px">
               Python bot using pyBotDiscord made by Handsome Vipul
             </p>
           </div>
@@ -185,11 +199,11 @@ b = int(input("Enter a number: "))
 print(math.pow(a,b))
             </code></pre>
           </div>
-          <hr style="background: #896a9a; color: #896a9a;">
+          <hr style="background: #896a9a; color: #896a9a" />
           <div class="snbod">
             <span class="badge" style="background: #896a9a">Python</span>
-            <br>
-            <p style="margin-top: 10px;">
+            <br />
+            <p style="margin-top: 10px">
               Python bot using pyBotDiscord made by Handsome Vipul
             </p>
           </div>
@@ -203,11 +217,11 @@ b = int(input("Enter a number: "))
 print(math.pow(a,b))
             </code></pre>
           </div>
-          <hr style="background: #896a9a; color: #896a9a;">
+          <hr style="background: #896a9a; color: #896a9a" />
           <div class="snbod">
             <span class="badge" style="background: #896a9a">Python</span>
-            <br>
-            <p style="margin-top: 10px;">
+            <br />
+            <p style="margin-top: 10px">
               Python bot using pyBotDiscord made by Handsome Vipul
             </p>
           </div>
@@ -221,11 +235,11 @@ b = int(input("Enter a number: "))
 print(math.pow(a,b))
             </code></pre>
           </div>
-          <hr style="background: #896a9a; color: #896a9a;">
+          <hr style="background: #896a9a; color: #896a9a" />
           <div class="snbod">
             <span class="badge" style="background: #896a9a">Python</span>
-            <br>
-            <p style="margin-top: 10px;">
+            <br />
+            <p style="margin-top: 10px">
               Python bot using pyBotDiscord made by Handsome Vipul
             </p>
           </div>
@@ -239,11 +253,11 @@ b = int(input("Enter a number: "))
 print(math.pow(a,b))
             </code></pre>
           </div>
-          <hr style="background: #896a9a; color: #896a9a;">
+          <hr style="background: #896a9a; color: #896a9a" />
           <div class="snbod">
             <span class="badge" style="background: #896a9a">Python</span>
-            <br>
-            <p style="margin-top: 10px;">
+            <br />
+            <p style="margin-top: 10px">
               Python bot using pyBotDiscord made by Handsome Vipul
             </p>
           </div>
@@ -257,11 +271,11 @@ b = int(input("Enter a number: "))
 print(math.pow(a,b))
             </code></pre>
           </div>
-          <hr style="background: #896a9a; color: #896a9a;">
+          <hr style="background: #896a9a; color: #896a9a" />
           <div class="snbod">
             <span class="badge" style="background: #896a9a">Python</span>
-            <br>
-            <p style="margin-top: 10px;">
+            <br />
+            <p style="margin-top: 10px">
               Python bot using pyBotDiscord made by Handsome Vipul
             </p>
           </div>
