--- a/CodeWatch/frontend/snpld.html
+++ b/CodeWatch/frontend/snpld.html
@@ -91,48 +91,44 @@
                 Snippets
               </a>
             </li>
-            <li>
-              <a href="profile.html" class="nav-link text-white">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="16"
-                  height="16"
-                  fill="currentColor"
-                  class="bi bi-person-fill"
-                  viewBox="0 0 16 16"
-                >
-                  <path
-                    d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3Zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z"
-                  />
-                </svg>
-                Profile
-              </a>
-            </li>
-            <li>
-              <a href="settings.html" class="nav-link text-white">
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  width="16"
-                  height="16"
-                  fill="currentColor"
-                  class="bi bi-sliders"
-                  viewBox="0 0 16 16"
-                >
-                  <path
-                    fill-rule="evenodd"
-                    d="M11.5 2a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3zM9.05 3a2.5 2.5 0 0 1 4.9 0H16v1h-2.05a2.5 2.5 0 0 1-4.9 0H0V3h9.05zM4.5 7a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3zM2.05 8a2.5 2.5 0 0 1 4.9 0H16v1H6.95a2.5 2.5 0 0 1-4.9 0H0V8h2.05zm9.45 4a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3zm-2.45 1a2.5 2.5 0 0 1 4.9 0H16v1h-2.05a2.5 2.5 0 0 1-4.9 0H0v-1h9.05z"
-                  />
-                </svg>
-                Settings
-              </a>
-            </li>
           </ul>
         </div>
       </div>
 
       <div class="snupco">
         <div class="snpup">
-            
+          <div class="mb-3">
+            <label class="form-label">Snippet Small Description</label>
+            <input
+              type="email"
+              class="snipinp form-control"
+              id="exampleFormControlInput1"
+              placeholder="Discord bot? Form format? You tell.."
+            />
+          </div>
+          <div class="mb-3">
+            <label class="form-label">Code Snippet</label>
+            <textarea
+              class="snipinp form-control"
+              id="exampleFormControlTextarea1"
+              rows="3"
+            ></textarea>
+          </div>
+          <div class="mb-3">
+            <label class="form-label">Programming Language</label>
+            <input
+              type="email"
+              class="snipinp form-control"
+              id="exampleFormControlInput1"
+              placeholder="name@example.com"
+            />
+          </div>
+
+          <div class="col-auto">
+            <button type="submit" class="btn btn-primary mb-3">
+              Confirm identity
+            </button>
+          </div>
         </div>
       </div>
     </main>
