--- a/CodeWatch/frontend/snpld.html
+++ b/CodeWatch/frontend/snpld.html
@@ -103,7 +103,6 @@
               type="email"
               class="snipinp form-control"
               id="exampleFormControlInput1"
-              placeholder="Discord bot? Form format? You tell.."
             />
           </div>
           <div class="mb-3">
@@ -120,13 +119,12 @@
               type="email"
               class="snipinp form-control"
               id="exampleFormControlInput1"
-              placeholder="name@example.com"
             />
           </div>
 
-          <div class="col-auto">
-            <button type="submit" class="btn btn-primary mb-3">
-              Confirm identity
+          <div class="snipbtn">
+            <button type="submit" class="snpsubmit fw-medium btn mb-3">
+              Save Snippet
             </button>
           </div>
         </div>
