--- a/CodeWatch/frontend/index.html
+++ b/CodeWatch/frontend/index.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
-    <script type="module" src="../main.js"></script>
+    <script type="module" src="main.js"></script>
   </head>
 
   <body style="background: #040506">
