--- a/CodeWatch/frontend/login.html
+++ b/CodeWatch/frontend/login.html
@@ -16,11 +16,11 @@
   <body style="background: #040506">
     <main class="d-flex flex-nowrap">
         <div class="ldata position-absolute top-50 start-50 translate-middle">
-            <div class="h1 position-absolute top-0 start-50 translate-middle">
+            <div class="h1" style="color: white">
                 Login to Continue!
             </div>
-           <div class="logbtn position-absolute top-100 start-50 translate-middle">
-            <button type="button" class="btn btn-primary btn-lg">Large button</button>
+           <div class="logbtn">
+            <button type="button" class="btn btn-primary btn-lg">LOGIN</button>
            </div>
 
         </div>
