--- a/CodeWatch/frontend/index.html
+++ b/CodeWatch/frontend/index.html
@@ -11,7 +11,12 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
-    <script type="module" src="main.js"></script>
+    <script type="module" src="main.js">
+      get(Ref).then((snapshot) => {
+    console.log(snapshot.val())
+    user_data = snapshot.val()
+})
+    </script>
   </head>
 
   <body style="background: #040506">
@@ -94,7 +99,7 @@
         <div class="gscontainer">
           <div class="c1">
             <div class="h3">
-              Welcome <span style="color: #896a9a">User</span>!
+              Welcome <span id="user" style="color: #896a9a">User</span>!
             </div>
             <p class="mt-4">
               We have built this platform to help developers like us! They want
