--- a/CodeWatch/frontend/home.html
+++ b/CodeWatch/frontend/home.html
@@ -27,18 +27,12 @@
             <svg class="bi pe-none me-2" width="40" height="32">
               <use xlink:href="#bootstrap" />
             </svg>
-            <span class="fs-4"
-              >Code<span style="color: #6c9df9">Watch</span></span
-            >
+            <span class="fs-4">Code<span style="color: #6c9df9">Watch</span></span>
           </a>
           <hr />
           <ul class="nav nav-pills flex-column mb-auto">
             <li class="nav-item">
-              <a
-                href="home.html"
-                class="nav-link text-white"
-                aria-current="page"
-              >
+              <a href="index.html" class="nav-link activ acbg" aria-current="page">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="16"
@@ -75,7 +69,7 @@
               </a>
             </li>
             <li>
-              <a href="snippets.html" class="nav-link activ acbg">
+              <a href="snippets.html" class="nav-link text-white">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="16"
@@ -95,37 +89,49 @@
         </div>
       </div>
 
-      <div class="snupco">
-        <div class="snpup">
-          <div class="mb-3">
-            <label class="form-label">Snippet Small Description</label>
-            <input
-              type="email"
-              class="snipinp form-control"
-              id="exampleFormControlInput1"
-            />
+      <div class="gscont">
+        <div class="gscontainer">
+          <div class="c1">
+            <div class="h3">
+              Welcome <span id="user" style="color: #896a9a">User</span>!
+            </div>
+            <p class="mt-4">
+              We have built this platform to help developers like us! They want
+              to make their programming experience more productive. You can use
+              our different utilities to optimize your workflow! To get
+              perfectly set up, you can install our VS Code extension.
+            </p>
           </div>
-          <div class="mb-3">
-            <label class="form-label">Code Snippet</label>
-            <textarea
-              class="snipinp form-control"
-              id="exampleFormControlTextarea1"
-              rows="3"
-            ></textarea>
+          <div class="c3">
+            <div class="h3">Analytics</div>
+            <p class="mt-4 fw-medium">
+              You know, we know, analytics are boring! But until they are about
+              you and your skills, with our new Analytics tab, you can track the
+              longest you have coded! or maybe whats your coding style!? Or,
+              what languages do you use the most? and much, much more, all in
+              one place! To fully utilize analytics, you must install the VS
+              Code extension.
+            </p>
           </div>
-          <div class="mb-3">
-            <label class="form-label">Programming Language</label>
-            <input
-              type="email"
-              class="snipinp form-control"
-              id="exampleFormControlInput1"
-            />
+          <div class="c4">
+            <div class="h3">Snippets</div>
+            <p class="mt-4 fw-medium">
+              I just got an idea for a new Discord bot! But too lazy to write
+              the code again:<br />
+              And your code folder is just too cluttered to see it again.<br />
+              Don't worry! Just come up with your very own snippet.<br />
+              Library! Just upload any of your small or big code snippets, and
+              they will be saved here forever! Just come back here and look for
+              that exact one, and you are good to go!
+            </p>
           </div>
-
-          <div class="snipbtn">
-            <button type="submit" class="snpsubmit fw-medium btn mb-3">
-              Save Snippet
-            </button>
+          <div class="c2">
+            <div class="h3">Profile</div>
+            <p class="mt-4 fw-medium">
+              Everybody knows how cool profiles are.aren't they? Our profile
+              section showsyour stats, your cool badges, yourbest milestones,
+              and what about yourEXP? Yes, that too!
+            </p>
           </div>
         </div>
       </div>
