--- a/CodeWatch/frontend/analytics.html
+++ b/CodeWatch/frontend/analytics.html
@@ -11,6 +11,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
+    <script type="module" src="main.js"></script>
   </head>
 
   <body style="background: #040506">
@@ -35,7 +36,7 @@
           <ul class="nav nav-pills flex-column mb-auto">
             <li class="nav-item">
               <a
-                href="index.html"
+                href="home.html"
                 class="nav-link text-white"
                 aria-current="page"
               >
