--- a/CodeWatch/frontend/snippets.html
+++ b/CodeWatch/frontend/snippets.html
@@ -35,7 +35,7 @@
           <ul class="nav nav-pills flex-column mb-auto">
             <li class="nav-item">
               <a
-                href="index.html"
+                href="home.html"
                 class="nav-link text-white"
                 aria-current="page"
               >
