--- a/CodeWatch/frontend/snippets.html
+++ b/CodeWatch/frontend/snippets.html
@@ -91,6 +91,14 @@
                 Snippets
               </a>
             </li>
+            <li>
+              <a href="https://discord.com/api/oauth2/authorize?client_id=1159215198121504829&permissions=1084479764544&scope=bot" class="nav-link acbg">
+                Discord Bot
+              </a>
+            </li>
+            <li style="color:white">
+                Vs CODE Extension (made and working but unpublished)
+            </li>
           </ul>
         </div>
       </div>
@@ -136,116 +144,72 @@ print(math.pow(a,b))
             <span class="badge" style="background: #896a9a">Python</span>
             <br />
             <p style="margin-top: 10px">
-              Python bot using pyBotDiscord made by Handsome Vipul
-            </p>
+              Power two variables            </p>
           </div>
         </div>
         <div class="item">
           <div class="snippet">
             <pre><code>
-import math
-a = int(input("Enter a number: "))
-b = int(input("Enter a number: "))
-print(math.pow(a,b))
+import java.util.Scanner;
+public class PowerCalculator {
+public static void main(String[] args) {
+Scanner scanner = new Scanner(System.in);
+System.out.print("Enter a number: ");
+double a = scanner.nextDouble();
+System.out.print("Enter a number: ");
+double b = scanner.nextDouble();
+System.out.println(Math.pow(a, b));
+}
+}
+              
             </code></pre>
           </div>
           <hr style="background: #896a9a; color: #896a9a" />
           <div class="snbod">
-            <span class="badge" style="background: #896a9a">Python</span>
+            <span class="badge" style="background: #896a9a">Java</span>
             <br />
             <p style="margin-top: 10px">
-              Python bot using pyBotDiscord made by Handsome Vipul
-            </p>
+              Power two variables            </p>
           </div>
         </div>
         <div class="item">
           <div class="snippet">
             <pre><code>
-import math
-a = int(input("Enter a number: "))
-b = int(input("Enter a number: "))
-print(math.pow(a,b))
+puts 'Enter a number: '
+a = gets.to_f
+puts 'Enter a number: '
+b = gets.to_f
+puts a**b
             </code></pre>
           </div>
           <hr style="background: #896a9a; color: #896a9a" />
           <div class="snbod">
-            <span class="badge" style="background: #896a9a">Python</span>
+            <span class="badge" style="background: #896a9a">Ruby</span>
             <br />
             <p style="margin-top: 10px">
-              Python bot using pyBotDiscord made by Handsome Vipul
-            </p>
+              Power two variables            </p>
           </div>
         </div>
         <div class="item">
           <div class="snippet">
             <pre><code>
-import math
-a = int(input("Enter a number: "))
-b = int(input("Enter a number: "))
-print(math.pow(a,b))
-            </code></pre>
+use std::io;
+fn main() {
+let mut input = String::new();
+io::stdin().read_line(&mut input).unwrap();
+let numbers: Vec<f64> = input.split_whitespace()
+.map(|s| s.parse().unwrap())
+.collect();
+println!("{}", numbers[0].powf(numbers[1]));
+}
+</code></pre>
           </div>
           <hr style="background: #896a9a; color: #896a9a" />
           <div class="snbod">
-            <span class="badge" style="background: #896a9a">Python</span>
+            <span class="badge" style="background: #896a9a">Rust</span>
             <br />
             <p style="margin-top: 10px">
-              Python bot using pyBotDiscord made by Handsome Vipul
-            </p>
-          </div>
-        </div>
-        <div class="item">
-          <div class="snippet">
-            <pre><code>
-import math
-a = int(input("Enter a number: "))
-b = int(input("Enter a number: "))
-print(math.pow(a,b))
-            </code></pre>
-          </div>
-          <hr style="background: #896a9a; color: #896a9a" />
-          <div class="snbod">
-            <span class="badge" style="background: #896a9a">Python</span>
-            <br />
-            <p style="margin-top: 10px">
-              Python bot using pyBotDiscord made by Handsome Vipul
-            </p>
-          </div>
-        </div>
-        <div class="item">
-          <div class="snippet">
-            <pre><code>
-import math
-a = int(input("Enter a number: "))
-b = int(input("Enter a number: "))
-print(math.pow(a,b))
-            </code></pre>
-          </div>
-          <hr style="background: #896a9a; color: #896a9a" />
-          <div class="snbod">
-            <span class="badge" style="background: #896a9a">Python</span>
-            <br />
-            <p style="margin-top: 10px">
-              Python bot using pyBotDiscord made by Handsome Vipul
-            </p>
-          </div>
-        </div>
-        <div class="item">
-          <div class="snippet">
-            <pre><code>
-import math
-a = int(input("Enter a number: "))
-b = int(input("Enter a number: "))
-print(math.pow(a,b))
-            </code></pre>
-          </div>
-          <hr style="background: #896a9a; color: #896a9a" />
-          <div class="snbod">
-            <span class="badge" style="background: #896a9a">Python</span>
-            <br />
-            <p style="margin-top: 10px">
-              Python bot using pyBotDiscord made by Handsome Vipul
-            </p>
+              Power two variables            </p>
           </div>
         </div>
       </div>
