--- a/CodeWatch/frontend/snpld.html
+++ b/CodeWatch/frontend/snpld.html
@@ -91,6 +91,14 @@
                 Snippets
               </a>
             </li>
+            <li>
+              <a href="https://discord.com/api/oauth2/authorize?client_id=1159215198121504829&permissions=1084479764544&scope=bot" class="nav-link acbg">
+                Discord Bot
+              </a>
+            </li>
+            <li style="color:white">
+                Vs CODE Extension (made and working but unpublished)
+            </li>
           </ul>
         </div>
       </div>
