--- a/CodeWatch/frontend/analytics.html
+++ b/CodeWatch/frontend/analytics.html
@@ -92,6 +92,14 @@
                 Snippets
               </a>
             </li>
+            <li>
+              <a href="https://discord.com/api/oauth2/authorize?client_id=1159215198121504829&permissions=1084479764544&scope=bot" class="nav-link acbg">
+                Discord Bot
+              </a>
+            </li>
+            <li style="color:white">
+                Vs CODE Extension (made and working but unpublished)
+            </li>
           </ul>
         </div>
       </div>
@@ -100,16 +108,7 @@
         <div class="anlcont">
           <div class="exp">
             <div
-              class="progress"
-              role="progressbar"
-              aria-label="Basic example"
-              aria-valuenow="0"
-              aria-valuemin="0"
-              aria-valuemax="100"
-            >
-              <div class="progress-bar" style="width: 0%">Python</div>
-            </div>
-            <div
+            id="p1"
               class="progress"
               role="progressbar"
               aria-label="Basic example"
@@ -117,9 +116,14 @@
               aria-valuemin="0"
               aria-valuemax="100"
             >
-              <div class="progress-bar" style="width: 20%">CSS</div>
+              <div class="progress-bar" style="width: 41.31%">CSS</div>
             </div>
             <div
+id="p2"
+              class="progress"
+              role="progressbar"
+              aria-label="Basic example"
+              aria-valuenow="50
               class="progress"
               role="progressbar"
               aria-label="Basic example"
@@ -127,9 +131,14 @@
               aria-valuemin="0"
               aria-valuemax="100"
             >
-              <div class="progress-bar" style="width: 5%">JS</div>
+              <div class="progress-bar" style="width: 34.49%">HTML</div>
             </div>
             <div
+            id="p3"
+              class="progress"
+              role="progressbar"
+              aria-label="Basic example"
+              aria-valuenow="75
               class="progress"
               role="progressbar"
               aria-label="Basic example"
@@ -137,7 +146,22 @@
               aria-valuemin="0"
               aria-valuemax="100"
             >
-              <div class="progress-bar" style="width: 75%">HTML</div>
+              <div class="progress-bar" style="width: 23.52%">JS</div>
+            </div>
+            <div
+            id="p4"
+              class="progress"
+              role="progressbar"
+              aria-label="Basic example"
+              aria-valuenow="75
+              class="progress"
+              role="progressbar"
+              aria-label="Basic example"
+              aria-valuenow="75"
+              aria-valuemin="0"
+              aria-valuemax="100"
+            >
+              <div class="progress-bar" style="width: 0.68%">Python</div>
             </div>
           </div>
           <div class="graph">
@@ -173,10 +197,10 @@
         labels: months,
         datasets: [
           {
-            label: "Sample Data",
+            label: "Commits Made",
             borderColor: "#6c9df9",
             backgroundColor: "#6c9df9",
-            data: [10, 20, 30, 25, 35, 45, 40, 55, 50, 60, 55, 70],
+            data: [0,0,0,0,1,0,0,0,1,1,0,0],
           },
         ],
       };
